added rest api for categories with benefits
