# routes/api/v1/index.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\API\v1\Catalog\CategoryController;
 use App\Http\Controllers\API\v1\Catalog\DgProductController;
 use App\Http\Controllers\API\v1\Shop\ApplicationRequestController;
 use Illuminate\Support\Facades\Route;
@@ -11,6 +12,13 @@ Route::group(['prefix' => 'catalog'], function () {
         Route::group(['prefix' => '{dg_product_id}'], function () {
             Route::get('', [DgProductController::class, 'get']);
             Route::get('group_options', [DgProductController::class, 'groupOptions']);
+        });
+    });
+
+    Route::group(['prefix' => 'categories'], function () {
+        Route::get('', [CategoryController::class, 'index']);
+        Route::group(['prefix' => '{category_code}'], function () {
+            Route::get('', [CategoryController::class, 'getByCode']);
         });
     });
 });
